--- a/index.html
+++ b/index.html
@@ -1,61 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="./resources/css/style.css" type="css/text" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Broadway Design</title>
   </head>
   <body>
     <div class="building">
       <h1>Broadway Design</h1>
-      <p><a class="" href="#home">Home</a></p>
-      <p><a class="" href="#process">Process</a></p>
-      <p><a class="" href="#work">Work</a></p>
-      <p><a class="" href="#team">Team</a></p>
-      <p><a class="" href="#contact">Contact</a></p>
+      <p><a class="navigation" href="#home">Home</a></p>
+      <p><a class="navigation" href="#process">Process</a></p>
+      <p><a class="navigation" href="#work">Work</a></p>
+      <p><a class="navigation" href="#team">Team</a></p>
+      <p><a class="navigation" href="#contact">Contact</a></p>
     </div>
 
     <div class="text" id="process">
       <h2>Our Process</h2>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
-      <h3>Identify</h3>
-      <p>We focus on the most important details.</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
-      <h3>Understand</h3>
-      <p>We study our projects inside and out.</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
-      <h3>Execute</h3>
-      <p>We put everything we have into our work.</p>
+        <div class="text-sub">
+          <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+          <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
+        </div>
+        <div class="text-sub">
+          <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+          <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+        </div>
+        <div class="text-sub">
+          <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+          <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+        </div>
     </div>
 
     <div class="building">
       <h2>Designed in New York</h2>
     </div>
 
-    <div class="">
-      <h3>Portfolio</h3>
-      <p>Comin Soon</p>
-      <h3>Team</h3>
-      <p>We're Hiring!</p>
-      <h3>Contact</h3>
-      <p>Phone: (555)-555-5555</p>
-      <p>Email: test@example.com</p>
-      <p>Twitter: @test</p>
+    <div class="text" id="work">
+      <div class="text-sub">
+        <h3>Portfolio</h3>
+        <p>Comin Soon</p>
+      </div>
+
+      <div class="text-sub" id="team">
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
+
+      <div class="text-sub" id="contact">
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>Email: test@example.com</p>
+        <p>Twitter: @test</p>
+      </div>
     </div>
 
     <div class="footer">
       <p>
         &copy; Broadway 2016
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#work">Work</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
+        <a class="navigation" href="#home">Home</a>
+        <a class="navigation" href="#about">About</a>
+        <a class="navigation" href="#work">Work</a>
+        <a class="navigation" href="#team">Team</a>
+        <a class="navigation" href="#contact">Contact</a>
       </p>
-  </div>
-
-
-
-
-  </body>
+    </div>
+</body>
 </html>
